updated angular dashboard

--- a/Front/src/app/accueil/accueil.component.html
+++ b/Front/src/app/accueil/accueil.component.html
@@ -30,6 +30,7 @@
               <div class="col-lg-6 mb-4">
                 <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grace a
                   EasyRequest</h1>
+                <a routerLink="/enseignant/">bbbbbbbb</a>
                 <p class="mb-4" data-aos="fade-up" data-aos-delay="200"> Du problème à la solution, une requête à la
                   fois.</p>
               </div>
@@ -104,7 +105,6 @@
           </div>
         </div>
       </div>
-
       <div class="row mb-5 align-items-center">
         <div class="col-lg-7 mb-5 order-1 order-lg-2">
           <img
