--- a/Front/src/app/components/enseignant/liste-requete2/liste-requete2.component.html
+++ b/Front/src/app/components/enseignant/liste-requete2/liste-requete2.component.html
@@ -1,213 +1,215 @@
-<!--<div id="app">-->
-<!--  <div class="main-wrapper main-wrapper-1">-->
-<!--    <div class="navbar-bg"></div>-->
-<!--    <app-navbar></app-navbar>-->
-<!--    <div class="main-sidebar sidebar-style-2">-->
-<!--      <aside id="sidebar-wrapper">-->
-<!--        <div class="sidebar-brand">-->
-<!--          <a href="">-->
-<!--            <span class="logo-name">EasyRequest</span>-->
-<!--          </a>-->
-<!--        </div>-->
-<!--        <ul class="sidebar-menu">-->
-<!--          <li class="menu-header">Main</li>-->
-<!--          <li class="dropdown active">-->
-<!--            <a class="nav-link" href="liste_requete2"-->
-<!--            ><i data-feather="monitor"></i><span>Dashboard</span></a-->
-<!--            >-->
-<!--          </li>-->
-<!--          <li class="dropdown">-->
-<!--            <a class="menu-toggle nav-link has-dropdown" href="#"-->
-<!--            ><i data-feather="mail"></i-->
-<!--            ><span>Traitement des Requêtes</span></a-->
-<!--            >-->
-<!--            <ul class="dropdown-menu">-->
-<!--              <li>-->
-<!--                <a class="nav-link" href="list_individuel"-->
-<!--                >Requêtes individuelles</a-->
-<!--                >-->
-<!--              </li>-->
-<!--              <li>-->
-<!--                <a class="nav-link" href="list_collective"-->
-<!--                >Requêtes collectives</a-->
-<!--                >-->
-<!--              </li>-->
-<!--            </ul>-->
-<!--          </li>-->
+<div>
+  <div class="main-wrapper main-wrapper-1">
+    <div class="navbar-bg"></div>
+    <app-navbar></app-navbar>
+    <div class="main-sidebar sidebar-style-2">
+      <aside id="sidebar-wrapper">
+        <div class="sidebar-brand">
+          <a href="">
+            <span class="logo-name">EasyRequest</span>
+          </a>
+        </div>
+        <ul class="sidebar-menu">
+          <li class="menu-header">Main</li>
+          <li class="dropdown active">
+            <a class="nav-link" href="liste_requete2"
+            ><i data-feather="monitor"></i><span>Dashboard</span></a
+            >
+          </li>
+          <li class="dropdown">
+            <a class="menu-toggle nav-link has-dropdown" href="#"
+            ><i data-feather="mail"></i
+            ><span>Traitement des Requêtes</span></a
+            >
+            <ul class="dropdown-menu">
+              <li>
+                <a class="nav-link" href="list_individuel"
+                >Requêtes individuelles</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="list_collective"
+                >Requêtes collectives</a
+                >
+              </li>
+            </ul>
+          </li>
 
-<!--          <li class="dropdown">-->
-<!--            <a class="menu-toggle nav-link has-dropdown" href="#"-->
-<!--            ><i data-feather="calendar"></i><span>Calendrier</span></a-->
-<!--            >-->
-<!--            <ul class="dropdown-menu">-->
-<!--              <li>-->
-<!--                <a class="nav-link" href="programme_enseignant"-->
-<!--                >Programme</a-->
-<!--                >-->
-<!--              </li>-->
-<!--              <li>-->
-<!--                <a class="nav-link" href="ajout_programme"-->
-<!--                >Ajouter un Programme</a-->
-<!--                >-->
-<!--              </li>-->
-<!--            </ul>-->
-<!--          </li>-->
-<!--        </ul>-->
-<!--      </aside>-->
-<!--    </div>-->
-<!--    &lt;!&ndash; Main Content &ndash;&gt;-->
-<!--    <div class="main-content">-->
-<!--      <section class="section">-->
-<!--        <nav aria-label="breadcrumb">-->
-<!--          <ol class="breadcrumb bg-primary text-white-all">-->
-<!--            <li class="breadcrumb-item"><a href="#"><i class="fas fa-tachometer-alt"></i> Home</a></li>-->
-<!--            <li class="breadcrumb-item"><a href="#"><i class="far fa-file"></i> Dashboard</a></li>-->
-<!--          </ol>-->
-<!--        </nav>-->
-<!--        <div class="row">-->
-<!--          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
-<!--            <div class="card">-->
-<!--              <div class="card-statistic-4">-->
-<!--                <div class="align-items-center justify-content-between">-->
-<!--                  <div class="row">-->
-<!--                    <div-->
-<!--                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"-->
-<!--                    >-->
-<!--                      <div class="card-content">-->
-<!--                        <h5 class="font-15">Total de Requête</h5>-->
-<!--                        <h2 class="mb-3 font-18">250</h2>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">-->
-<!--                      <div class="banner-img">-->
-<!--                        <img alt="" src="../assets/img/banner/1.png"/>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
-<!--            <div class="card">-->
-<!--              <div class="card-statistic-4">-->
-<!--                <div class="align-items-center justify-content-between">-->
-<!--                  <div class="row">-->
-<!--                    <div-->
-<!--                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"-->
-<!--                    >-->
-<!--                      <div class="card-content">-->
-<!--                        <h5 class="font-15">Requête Validée</h5>-->
-<!--                        <h2 class="mb-3 font-18">120</h2>-->
-<!--                        &lt;!&ndash; <p class="mb-0"><span class="col-orange">09%</span> Decrease</p> &ndash;&gt;-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">-->
-<!--                      <div class="banner-img">-->
-<!--                        <img alt="" src="../assets/img/banner/2.png"/>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
-<!--            <div class="card">-->
-<!--              <div class="card-statistic-4">-->
-<!--                <div class="align-items-center justify-content-between">-->
-<!--                  <div class="row">-->
-<!--                    <div-->
-<!--                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"-->
-<!--                    >-->
-<!--                      <div class="card-content">-->
-<!--                        <h5 class="font-15">Requête Rejetée</h5>-->
-<!--                        <h2 class="mb-3 font-18">126</h2>-->
-<!--                        &lt;!&ndash; <p class="mb-0"><span class="col-green">18%</span>-->
-<!--                        Increase</p> &ndash;&gt;-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">-->
-<!--                      <div class="banner-img">-->
-<!--                        <img alt="" src="../assets/img/banner/3.png"/>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">-->
-<!--            <div class="card">-->
-<!--              <div class="card-statistic-4">-->
-<!--                <div class="align-items-center justify-content-between">-->
-<!--                  <div class="row">-->
-<!--                    <div-->
-<!--                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"-->
-<!--                    >-->
-<!--                      <div class="card-content">-->
-<!--                        <h5 class="font-15">Requête en attente</h5>-->
-<!--                        <h2 class="mb-3 font-18">697</h2>-->
-<!--                        &lt;!&ndash; <p class="mb-0"><span class="col-green">42%</span> Increase</p> &ndash;&gt;-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">-->
-<!--                      <div class="banner-img">-->
-<!--                        <img alt="" src="../assets/img/banner/4.png"/>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <section class="section">-->
-<!--          <div class="section-body">-->
-<!--            <div class="row">-->
-<!--              <div class="col-12">-->
-<!--                <div class="card">-->
-<!--                  <div class="card-header">-->
-<!--                    <h4>Liste des requestes non Traites</h4>-->
-<!--                  </div>-->
-<!--                  <div class="card-body">-->
-<!--                    <div class="table-responsive">-->
-<!--                      <table-->
-<!--                        class="table table-striped table-hover"-->
-<!--                        id="tableExport"-->
-<!--                        style="width: 100%"-->
-<!--                      >-->
-<!--                        <thead>-->
-<!--                        <tr>-->
-<!--                          <th>#</th>-->
-<!--                          <th>sender</th>-->
-<!--                          <th>title</th>-->
-<!--                          <th>Type</th>-->
-<!--                          <th>Date d'envoie</th>-->
-<!--                          <th>Details</th>-->
-<!--                        </tr>-->
-<!--                        </thead>-->
-<!--                        <tbody>-->
-<!--                        <tr *ngFor="let request of requests; let i = index">-->
-<!--                          <td>{{ i + 1 }}</td>-->
-<!--                          <td>{{ request.sender_id }}</td>-->
-<!--                          <td>{{ request.title }}</td>-->
-<!--                          <td>{{ request.request_pattern_id }}</td>-->
-<!--                        </tr>-->
-<!--                        </tbody>-->
-<!--                      </table>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </section>-->
-<!--      </section>-->
-<!--    </div>-->
-<!--    <app-colorpanel></app-colorpanel>-->
-<!--  </div>-->
-<!--  <app-footer></app-footer>-->
-<!--</div>-->
+          <li class="dropdown">
+            <a class="menu-toggle nav-link has-dropdown" href="#"
+            ><i data-feather="calendar"></i><span>Calendrier</span></a
+            >
+            <ul class="dropdown-menu">
+              <li>
+                <a class="nav-link" href="programme_enseignant"
+                >Programme</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="ajout_programme"
+                >Ajouter un Programme</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </aside>
+    </div>
+    <!-- Main Content -->
+    <div class="main-content">
+      <section class="section">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb bg-primary text-white-all">
+            <li class="breadcrumb-item"><a href="#"><i class="fas fa-tachometer-alt"></i> Home</a></li>
+            <li class="breadcrumb-item"><a href="#"><i class="far fa-file"></i> Dashboard</a></li>
+          </ol>
+        </nav>
+        <div class="row">
+          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+              <div class="card-statistic-4">
+                <div class="align-items-center justify-content-between">
+                  <div class="row">
+                    <div
+                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"
+                    >
+                      <div class="card-content">
+                        <h5 class="font-15">Total de Requête</h5>
+                        <h2 class="mb-3 font-18">250</h2>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                      <div class="banner-img">
+                        <img alt="" src="../assets/img/banner/1.png"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+              <div class="card-statistic-4">
+                <div class="align-items-center justify-content-between">
+                  <div class="row">
+                    <div
+                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"
+                    >
+                      <div class="card-content">
+                        <h5 class="font-15">Requête Validée</h5>
+                        <h2 class="mb-3 font-18">120</h2>
+                        <!-- <p class="mb-0"><span class="col-orange">09%</span> Decrease</p> -->
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                      <div class="banner-img">
+                        <img alt="" src="../assets/img/banner/2.png"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+              <div class="card-statistic-4">
+                <div class="align-items-center justify-content-between">
+                  <div class="row">
+                    <div
+                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"
+                    >
+                      <div class="card-content">
+                        <h5 class="font-15">Requête Rejetée</h5>
+                        <h2 class="mb-3 font-18">126</h2>
+                        <!-- <p class="mb-0"><span class="col-green">18%</span>
+                        Increase</p> -->
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                      <div class="banner-img">
+                        <img alt="" src="../assets/img/banner/3.png"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="card">
+              <div class="card-statistic-4">
+                <div class="align-items-center justify-content-between">
+                  <div class="row">
+                    <div
+                      class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3"
+                    >
+                      <div class="card-content">
+                        <h5 class="font-15">Requête en attente</h5>
+                        <h2 class="mb-3 font-18">697</h2>
+                        <!-- <p class="mb-0"><span class="col-green">42%</span> Increase</p> -->
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                      <div class="banner-img">
+                        <img alt="" src="../assets/img/banner/4.png"/>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <section class="section">
+          <div class="section-body">
+            <div class="row">
+              <div class="col-12">
+                <div class="card">
+                  <div class="card-header">
+                    <h4>Liste des requestes non Traites</h4>
+                  </div>
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table
+                        class="table table-striped table-hover"
+                        id="tableExport"
+                        style="width: 100%"
+                      >
+                        <thead>
+                        <tr>
+                          <th>#</th>
+                          <th>sender</th>
+                          <th>title</th>
+                          <th>Type</th>
+                          <th>Date d'envoie</th>
+                          <th>Details</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let request of requests; let i = index">
+                          <td>{{ i + 1 }}</td>
+                          <td>{{ request.sender_id }}</td>
+                          <td>{{ request.title }}</td>
+                          <td>{{ request.request_pattern_id }}</td>
+                        </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+    </div>
+    <app-colorpanel></app-colorpanel>
+  </div>
+  <app-footer></app-footer>
+</div>
 
-<p>jdgkjfdkjfdghfhdfgdjkfgduifgeui</p>
+
+
+
