--- a/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
+++ b/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
@@ -10,13 +10,13 @@
       src: 'assets/img/brand/coreui-angular.svg',
       width: 200,
       height: 46,
-      alt: 'CoreUI Logo'
+      alt: 'Easy Request Logo'
     }"
     [brandNarrow]="{
       src: 'assets/img/brand/coreui-signet-white.svg',
       width: 46,
       height: 46,
-      alt: 'CoreUI Logo'
+      alt: 'Easy Request'
     }"
     routerLink="./"
   />
