--- a/Front-CoreUI/src/app/views/pages/login/login.component.html
+++ b/Front-CoreUI/src/app/views/pages/login/login.component.html
@@ -1,59 +1,57 @@
 <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
   <c-container>
+
     <c-row class="justify-content-center">
       <c-col md="8">
         <c-card-group>
           <c-card class="p-4">
             <c-card-body>
-              <form cForm>
-                <h1>Login</h1>
-                <p class="text-medium-emphasis">Sign In to your account</p>
-                <c-input-group class="mb-3">
-                  <span cInputGroupText>
-                    <svg cIcon name="cilUser"></svg>
-                  </span>
-                  <input autoComplete="username" cFormControl placeholder="Username" />
-                </c-input-group>
-                <c-input-group class="mb-4">
-                  <span cInputGroupText>
-                    <svg cIcon name="cilLockLocked"></svg>
-                  </span>
-                  <input
-                    autoComplete="current-password"
-                    cFormControl
-                    placeholder="Password"
-                    type="password"
-                  />
-                </c-input-group>
-                <c-row>
-                  <c-col xs="6">
-                    <button cButton class="px-4" color="primary">
-                      Login
+
+              <form action="liste_requete3" method="post" [formGroup]="loginForm" (ngSubmit)="login()" class="form-box">
+                <h3 class="h4 text-black mb-4">Connexion</h3>
+
+                <div class="form-group mt-3 btn-block btn-pill">
+                  <input type="email" pInputText formControlName="email" class="form-control"
+                         placeholder="Adresse email" id="email" name="email">
+
+                  <div *ngIf="email.invalid && (email.touched)" class="text-danger">
+                    <div *ngIf="email.errors?.['required']">Email is required</div>
+                    <div *ngIf="email.errors?.['email']">Email Should be valid</div>
+                  </div>
+                </div>
+
+                <div class="form-group mt-3 btn-block btn-pill ">
+                  <input type="password" pInputText formControlName="password" class="form-control"
+                         placeholder="Mot de passe" id="password" name="password">
+                  <div *ngIf="password.invalid && password.touched" class="text-danger">
+                    <div *ngIf="password.errors?.['required']">Password is required</div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <c-col xs="6" class="mt-3 btn-block btn-pill">
+                    <button cButton type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.valid">Login
                     </button>
                   </c-col>
-                  <c-col class="text-right" xs="6">
-                    <button cButton class="px-0" color="link">
-                      Forgot password?
-                    </button>
-                  </c-col>
-                </c-row>
+                </div>
               </form>
+
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
-            <c-card-body class="text-center">
-              <div>
-                <h2>Sign up</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
-                  Register Now!
-                </button>
-              </div>
-            </c-card-body>
-          </c-card>
+          <!--          <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">-->
+          <!--            <c-card-body class="text-center">-->
+          <!--              <div>-->
+          <!--                <h2>Sign up</h2>-->
+          <!--                <p>-->
+          <!--                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+          <!--                  tempor incididunt ut labore et dolore magna aliqua.-->
+          <!--                </p>-->
+          <!--                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">-->
+          <!--                  Register Now!-->
+          <!--                </button>-->
+          <!--              </div>-->
+          <!--            </c-card-body>-->
+          <!--          </c-card>-->
         </c-card-group>
       </c-col>
     </c-row>
