--- a/Front-CoreUI/src/app/features/screens/staff/show-request/show-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/show-request/show-request.component.html
@@ -1,1 +1,21 @@
-<p>show-request works!</p>
+<!--<div>-->
+<!--  <h2>{{ request }}</h2>-->
+<!--  <p>{{ request?.content }}</p>-->
+<!--  <p>Statut: {{ request?.statut }}</p>-->
+<!--  <p>Date de création: {{ request?.created_at | date: 'dd/MM/yyyy' }}</p>-->
+
+<!--  <h3>Pièces jointes :</h3>-->
+<!--  <ul *ngIf="request?.attachments">-->
+<!--    <li *ngFor="let attachment of request?.attachments">-->
+<!--      <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank">{{ getAttachmentName(attachment.file_path) }}</a>-->
+<!--    </li>-->
+<!--  </ul>-->
+
+<!--  <div>-->
+<!--    <button cButton color="success" (click)="validerRequest()">Valider</button>-->
+<!--    <button cButton color="danger" (click)="rejeterRequest()">Rejeter</button>-->
+<!--    <button cButton color="warning" (click)="mettreEnAttenteRequest()">Mettre en attente</button>-->
+<!--  </div>-->
+<!--</div>-->
+<!--  -->
+  
