--- a/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
+++ b/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
@@ -10,7 +10,7 @@
       src: 'assets/img/brand/coreui-angular.svg',
       width: 200,
       height: 46,
-      alt: 'Easy Request Logo'
+      alt: 'Easy Request Logo',
     }"
     [brandNarrow]="{
       src: 'assets/img/brand/coreui-signet-white.svg',
