--- a/Front-CoreUI/src/app/features/screens/staff/add-deadline/add-deadline.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/add-deadline/add-deadline.component.html
@@ -1,1 +1,30 @@
-<p>add-deadline works!</p>
+<div class="row">
+    <div class="col-12 col-md-12 col-lg-12">
+        <div class="card">
+            <div class="card-header">
+              <h6>Ajouter une programmation de delais</h6>
+            </div>
+            <div class="card-body">
+                <div class="form-group">
+                    <label>UE</label>            
+                    <input type="text" class="form-control">
+                </div>
+              <div class="form-group">
+                <label class="d-block">Date d'envoie</label>
+                <a href="javascript:;" class="btn btn-primary daterange-btn icon-left btn-icon"><i
+                    class="fas fa-calendar"></i>&nbsp; <span style="font-size: 14px;">Choose Date</span>
+                    <input type="text" class="form-control" >
+                  </a> 
+              </div>
+              <div class="form-group">
+                <label>Date de delais</label>
+                <input type="text" class="form-control datepicker">
+              </div>
+              <br>
+              <div>
+                <button class="btn btn-primary " style="font-size: 12px;" >Ajouter votre programme</button>
+              </div>
+            </div>
+          </div>
+    </div>
+  </div>
