--- a/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
@@ -23,7 +23,7 @@
                   </tr>
                   </thead>
                   <tbody>
-                  <tr *ngFor="let request of requests; let i = index">
+                  <!-- <tr *ngFor="let request of requests; let i = index">
                     <td>{{ i + 1 }}</td>
                     <td>{{ request.request_pattern_id }}</td>
                     <td>{{ request.title }}</td>
@@ -34,6 +34,70 @@
                     <td>
                       <button cButton class="me-1" color="primary" (click)="showRequest(request.id)">Details</button>
 
+                    </td>
+                  </tr> -->
+                  <tr>
+                    <td>1</td>
+                    <td>ICT302</td>
+                    <td>21Q2301</td>
+                    <td>Intitule</td>
+                    <td>21Q2301</td>
+                    <td>3</td>
+                    <td>12-11-2020</td>
+                    <td>
+                      <a routerLink="/detail"
+                        ><div class="badge badge-success">
+                          Traiter
+                        </div></a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>ICT302</td>
+                    <td>21Q2301</td>
+                    <td>Intitule</td>
+                    <td>21Q2301</td>
+                    <td>3</td>
+                    <td>12-11-2020</td>
+                    <td>
+                      <a routerLink="/detail"
+                        ><div class="badge badge-success">
+                          Traiter
+                        </div></a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>ICT302</td>
+                    <td>21Q2301</td>
+                    <td>Intitule</td>
+                    <td>21Q2301</td>
+                    <td>3</td>
+                    <td>12-11-2020</td>
+                    <td>
+                      <a routerLink="/detail"
+                        ><div class="badge badge-success">
+                          Traiter
+                        </div></a
+                      >
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1</td>
+                    <td>ICT302</td>
+                    <td>21Q2301</td>
+                    <td>Intitule</td>
+                    <td>21Q2301</td>
+                    <td>3</td>
+                    <td>12-11-2020</td>
+                    <td>
+                      <a routerLink="/detail"
+                        ><div class="badge badge-success">
+                          Traiter
+                        </div></a
+                      >
                     </td>
                   </tr>
                   </tbody>
