--- a/Front-CoreUI/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front-CoreUI/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -7,48 +7,49 @@
     </div>
     <div class="site-mobile-menu-body"></div>
   </div>
-  <header
-    class="site-navbar py-4 js-sticky-header site-navbar-target"
-    role="banner"
-  >
+
+  <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
     <div class="container-fluid">
       <div class="d-flex align-items-center">
-        <div class="site-logo mr-auto w-25">
-          <a href="#">EasyRequest</a>
+        <div class="site-logo mr-auto w-100">
+          <a href="#" style="text-decoration: none;">EasyRequest</a>
         </div>
       </div>
     </div>
   </header>
-  <div
-    class="slide-1 d-flex align-items-center justify-content-center text-white"
-    style="
-          background-image: url('assets/img/pexels-cottonbro-studio-6209589.jpg');
-          height: 100vh;
-        "
-    data-stellar-background-ratio="0.5"
-  >
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-12">
-          <div class="row align-items-center">
-            <div class="col-lg-6 mb-4">
-              <h1 style="font-weight: bold">
-                Transformez vos requêtes en actions avec facilité grâce à EasyRequest
-              </h1>
-              <br/>
-              <p class="mb-4">
-                Du problème à la solution, une requête à la fois.
-              </p>
-              <a routerLink="/login" class="btn btn-primary btn-pill">
-                Se connecter
-              </a>
+  
+  <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
+    <div class="container-fluid">
+      <div class="d-flex align-items-center">
+        <div class="site-logo mr-auto w-100">
+          <a href="#" style="text-decoration: none;">EasyRequest</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  
+  <div class="intro-section" id="home-section">
+    <div class="slide-1" style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
+      <div class="container" style="max-width: 800px; padding: 0;">
+        <div class="row align-items-center">
+          <div class="col-12">
+            <div class="row align-items-center">
+              <div class="col-lg-12 text-center mb-4">
+                <h1 data-aos="fade-up" data-aos-delay="200">Explorez Nous</h1>
+                <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à EasyRequest</h1>
+                <p data-aos="fade-up" data-aos-delay="300">Du problème à la solution, une requête à la fois.</p><br>
+                <a routerLink="/login" class="btn btn-primary pills" style="background-color: rgb(97, 119, 227); border: none;">
+                  Se connecter
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
+  
+
   <div class="site-section" id="programs-section">
     <div class="container">
       <div class="row mb-5 justify-content-center">
@@ -81,9 +82,9 @@
             une satisfaction client maximale.
           </p>
           <div class="d-flex align-items-center custom-icon-wrap">
-                <span class="custom-icon-inner mr-3"
-                ><span class="icon icon-university"></span
-                ></span>
+            <span class="custom-icon-inner mr-3"
+              ><span class="icon icon-university"></span
+            ></span>
             <div><h3 class="m-0">universite de yaounde I</h3></div>
           </div>
         </div>
@@ -107,9 +108,9 @@
             requête est traitée de manière efficace.
           </p>
           <div class="d-flex align-items-center custom-icon-wrap">
-                <span class="custom-icon-inner mr-3"
-                ><span class="icon icon-university"></span
-                ></span>
+            <span class="custom-icon-inner mr-3"
+              ><span class="icon icon-university"></span
+            ></span>
             <div><h3 class="m-0">universite de yaounde I</h3></div>
           </div>
         </div>
@@ -120,8 +121,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h3>A propos de EasyRequest</h3>
-          <p>
+          <h3 >A propos de EasyRequest</h3>
+          <p style="color: gray;">
             EasyRequest simplifie la gestion des demandes étudiantes à
             travers une plateforme conviviale. Suivez, priorisez et résolvez
             efficacement les requêtes, offrant une solution transparente
@@ -132,7 +133,7 @@
 
         <div class="col-md-5">
           <h3>inscris toi</h3>
-          <p>
+          <p style="color: gray;">
             pour etre membre de notre communauté et avoir acces à nos
             derniers mises à jour et recommandation inscrivez vous sur notre
             plateforme
@@ -151,20 +152,6 @@
               />
             </div>
           </form>
-        </div>
-      </div>
-
-      <div class="row pt-5 mt-5 text-center">
-        <div class="col-md-12">
-          <div class="border-top pt-5">
-            <p>
-              Copyright &copy;
-              2023
-              All rights reserved |
-              <i class="icon-heart" aria-hidden="true"></i> by
-              <a href="#" target="_blank">EasyRequest</a>
-            </p>
-          </div>
         </div>
       </div>
     </div>
