--- a/Front-CoreUI/src/app/features/screens/staff/view-deadlines/view-deadlines.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/view-deadlines/view-deadlines.component.html
@@ -1,1 +1,102 @@
-<p>view-deadlines works!</p>
+<div class="col-12">
+    <div class="card">
+      <div class="card-header">
+        <h5>Echeances des Requetes</h5>
+      </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>UE</th>
+                    <th>Filiere</th>
+                    <th>Date d'envois</th>
+                    <th>Etat du Delai</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>ICT302</td>
+                    <td>ICT4D</td>
+                    <td>19-04-2023</td>
+                    <td>
+                      <div class="badge badge-success">En cours</div>
+                    </td>
+                    <td>
+                      <a class="btn btn-warning btn-action mr-1">
+                        Editer
+                      </a>
+                    </td>
+                    <td>
+                      <a class="btn btn-danger btn-action mr-1">
+                        supprimer
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>ICT302</td>
+                    <td>ICT4D</td>
+                    <td>19-04-2023</td>
+                    <td>
+                      <div class="badge badge-success">En cours</div>
+                    </td>
+                    <td>
+                      <a class="btn btn-warning btn-action mr-1">
+                        Editer
+                      </a>
+                    </td>
+                    <td>
+                      <a class="btn btn-danger btn-action mr-1">
+                        supprimer
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>ICT302</td>
+                    <td>ICT4D</td>
+                    <td>19-04-2023</td>
+                    <td>
+                      <div class="badge badge-danger">Terminer</div>
+                    </td>
+                    <td>
+                      <a class="btn btn-warning btn-action mr-1">
+                        Editer
+                      </a>
+                    </td>
+                    <td>
+                      <a class="btn btn-danger btn-action mr-1">
+                        supprimer
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>ICT302</td>
+                    <td>ICT4D</td>
+                    <td>19-04-2023</td>
+                    <td>
+                      <div class="badge badge-danger">Terminer</div>
+                    </td>
+                    <td>
+                      <a class="btn btn-warning btn-action mr-1">
+                        Editer
+                      </a>
+                    </td>
+                    <td>
+                      <a class="btn btn-danger btn-action mr-1">
+                        supprimer
+                      </a>
+                    </td>
+                  </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
