send request ok

--- a/Front-CoreUI/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front-CoreUI/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   </header>
-  
+
   <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
     <div class="container-fluid">
       <div class="d-flex align-items-center">
@@ -27,7 +27,7 @@
       </div>
     </div>
   </header>
-  
+
   <div class="intro-section" id="home-section">
     <div class="slide-1" style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
       <div class="container" style="max-width: 800px; padding: 0;">
@@ -38,9 +38,12 @@
                 <h1 data-aos="fade-up" data-aos-delay="200">Explorez Nous</h1>
                 <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à EasyRequest</h1>
                 <p data-aos="fade-up" data-aos-delay="300">Du problème à la solution, une requête à la fois.</p><br>
-                <a routerLink="/login" class="btn btn-primary pills" style="background-color: rgb(97, 119, 227); border: none;">
-                  Se connecter
+                <a routerLink="/login" class="btn btn-primary pills" style="background-color: rgb(97, 119, 227); border: none; padding: 15px 22px;">
+                  <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;">exit_to_app</i>
+                  <span style="font-size: 18px; vertical-align: middle;">Se connecter</span>
                 </a>
+
+
               </div>
             </div>
           </div>
@@ -48,7 +51,7 @@
       </div>
     </div>
   </div>
-  
+
 
   <div class="site-section" id="programs-section">
     <div class="container">
