--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -46,7 +46,7 @@
             <div class="col-sm-12 col-md-7">
               <div id="image-preview" class="image-preview">
                 <label for="image-upload" id="image-label">Choose File</label>
-                <input type="file" name="fileHandWritten" formControlName="fileHandWritten" id="image-upload"/>
+                <input type="file"  (change)="onFileChange($event)"  name="fileHandWritten" formControlName="fileHandWritten" id="image-upload"/>
               </div>
               <div *ngIf="fileHandWritten.invalid && fileHandWritten.touched" class="text-danger">
                 <div *ngIf="fileHandWritten.errors?.['required']">Pièce manuscrite est requise</div>
@@ -57,8 +57,8 @@
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes</label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" formControlName="fileAttachments"
-                       name="fileAttachments"/>
+                <input type="file" multiple (change)="onFileAttachmentsChange($event)" class="custom-file-input" id="customFile" formControlName="fileAttachments[]"
+                       name="fileAttachments[]"/>
                 <label class="custom-file-label" for="customFile">Choose file</label>
               </div>
               <div *ngIf="fileAttachments.invalid && fileAttachments.touched" class="text-danger">
