--- a/Front-CoreUI/src/app/views/pages/login/login.component.html
+++ b/Front-CoreUI/src/app/views/pages/login/login.component.html
@@ -1,59 +1,46 @@
-<div class="bg-light min-vh-100 d-flex flex-row align-items-center">
-  <c-container>
+<div class="intro-section" id="home-section">
+  <div class="slide-1"
+       style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
+    <div class="container" style="max-width: 800px; padding: 0;">
+      <div class="row align-items-center">
+        <div class="col-12">
+          <div class="row align-items-center">
+            <div class="col-lg-12 text-center mb-4">
 
-    <c-row class="justify-content-center">
-      <c-col md="8">
-        <c-card-group>
-          <c-card class="p-4">
-            <c-card-body>
-
-              <form action="liste_requete3" method="post" [formGroup]="loginForm" (ngSubmit)="login()" class="form-box">
+              <form action="liste_requete3" method="post" [formGroup]="loginForm" (ngSubmit)="login()"
+                    class="form-box">
                 <h3 class="h4 text-black mb-4">Connexion</h3>
 
-                <div class="form-group mt-3 btn-block btn-pill">
-                  <input type="email" pInputText formControlName="email" class="form-control"
+                <div class="form-group mt-3 d-flex flex-column">
+                  <input type="email" pInputText formControlName="email" class="form-control custom-input"
                          placeholder="Adresse email" id="email" name="email">
 
-                  <div *ngIf="email.invalid && (email.touched)" class="text-danger">
+                  <div *ngIf="email.invalid && email.touched" class="d-flex align-content-start text-danger">
                     <div *ngIf="email.errors?.['required']">Email is required</div>
                     <div *ngIf="email.errors?.['email']">Email Should be valid</div>
                   </div>
                 </div>
 
-                <div class="form-group mt-3 btn-block btn-pill ">
-                  <input type="password" pInputText formControlName="password" class="form-control"
+                <div class="form-group mt-3 d-flex flex-column">
+                  <input type="password" pInputText formControlName="password" class="form-control custom-input"
                          placeholder="Mot de passe" id="password" name="password">
-                  <div *ngIf="password.invalid && password.touched" class="text-danger">
+
+                  <div *ngIf="password.invalid && password.touched" class="d-flex align-content-start text-danger">
                     <div *ngIf="password.errors?.['required']">Password is required</div>
                   </div>
                 </div>
 
-                <div class="form-group">
-                  <c-col xs="6" class="mt-3 btn-block btn-pill">
-                    <button cButton type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.valid">Login
-                    </button>
-                  </c-col>
+                <div class="form-group  mt-3 ">
+                  <button cButton type="submit" class="btn btn-primary px-4 btn-pill btn-block"
+                          [disabled]="!loginForm.valid">Login
+                  </button>
                 </div>
               </form>
 
-            </c-card-body>
-          </c-card>
-          <!--          <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">-->
-          <!--            <c-card-body class="text-center">-->
-          <!--              <div>-->
-          <!--                <h2>Sign up</h2>-->
-          <!--                <p>-->
-          <!--                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
-          <!--                  tempor incididunt ut labore et dolore magna aliqua.-->
-          <!--                </p>-->
-          <!--                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">-->
-          <!--                  Register Now!-->
-          <!--                </button>-->
-          <!--              </div>-->
-          <!--            </c-card-body>-->
-          <!--          </c-card>-->
-        </c-card-group>
-      </c-col>
-    </c-row>
-  </c-container>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
