--- a/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
@@ -5,195 +5,47 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
+          <!-- list-request.component.html -->
+
           <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
             <thead>
-              <tr>
-                <th>#</th>
-                <th>Libellé</th>
-                <th>Type</th>
-                <th>motif</th>
-                <th>Date d'envoie</th>
-                <th>Etat</th>
-                <th>Details</th>
-                <th>Options</th>
-              </tr>
+            <tr>
+              <th>#</th>
+              <th>Intitule</th>
+<!--              <th>Type</th>-->
+              <th>motif</th>
+              <th>Date d'envoie</th>
+              <th>Etat</th>
+              <th>Details</th>
+<!--              <th>Options</th>-->
+            </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-success">Validé</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
+            <tr *ngFor="let request of requests; let i = index">
+              <td>{{ i + 1 }}</td>
+              <td>{{ request.title }}</td>
+<!--              <td>Individuelle</td>-->
+              <td>{{ getPatternDescriptionById(request.request_pattern_id) }}</td>
+              <td>{{ request.created_at | date: 'dd/MM/yyyy' }}</td>
+              <td>
+                <div [ngClass]="{'badge badge-success': request.statut === 'Validé', 'badge badge-danger': request.statut === 'Rejetée', 'badge badge-warning': request.statut === 'en_attente'}">
+                  {{ request.statut }}
+                </div>
               </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-success">Validé</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
+              <td>
+                <a [routerLink]="['/voir_requete', request.id]" class="btn btn-primary">
+                  Voir plus
+                </a>
               </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-danger">Rejetée</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
-              </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-warning">en attente</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
-              </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-success">Validé</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
-              </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-danger">Rejetée</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
-              </td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>ICT302</td>
-                <td>Individuelle</td>
-                <td>erreur de note</td>
-                <td>Mr Danielle</td>
-                <td>
-                  <div class="badge badge-warning">en attente</div>
-                </td>
-                <td>
-                  <a href="voir_requete.html"
-                    ><div class="btn btn-primary">
-                      voir plus
-                    </div></a
-                  >
-                </td>
-                <td>
-                  <a class="btn btn-warning btn-action mr-1">
-                      Editer
-                  </a>
-                  <a class="btn btn-danger btn-action">
-                      Supprimer
-                  </a>
-              </td>
-              </tr>
+<!--              <td>-->
+<!--                <a class="btn btn-warning btn-action mr-1">-->
+<!--                  Editer-->
+<!--                </a>-->
+<!--                <a class="btn btn-danger btn-action">-->
+<!--                  Supprimer-->
+<!--                </a>-->
+<!--              </td>-->
+            </tr>
             </tbody>
           </table>
         </div>
