updated staff request validate

--- a/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
@@ -25,7 +25,7 @@
                   <tbody>
                    <tr *ngFor="let request of requests; let i = index">
                     <td>{{ i + 1 }}</td>
-                    <td>{{ request.request_pattern_id }}</td>
+                    <td>Individuelle</td>
                     <td>{{ request.title }}</td>
                     <td>{{ request.content }}</td>
                     <td>{{ request.sender.matricule }}</td>
