--- a/Front-CoreUI/src/app/features/screens/staff/staff-dashboard/staff-dashboard.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/staff-dashboard/staff-dashboard.component.html
@@ -1,184 +1,1 @@
-<table
-class="table table-striped table-hover"
-id="tableExport"
-style="width: 100%"
->
-<thead>
-  <tr>
-    <th>#</th>
-    <th>UE</th>
-    <th>Type</th>
-    <th>nom_etudiant</th>
-    <th>Matricule</th>
-    <th>Date d'envoie</th>
-    <th>Etat</th>
-    <th>Options</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-success">Validé</div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-success">Validé</div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-success">Validé</div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-success">Validé</div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-danger">Rejeté</div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-warning">
-        En attente
-      </div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-success">Validé</div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>ICT302</td>
-    <td>requete_individuel</td>
-    <td>Danielle</td>
-    <td>21Q2301</td>
-    <td>12-23-2023</td>
-    <td>
-      <div class="badge badge-warning">
-        En attente
-      </div>
-    </td>
-    <td>
-      <a class="btn btn-warning btn-action mr-1">
-        Editer
-      </a>
-      <a class="btn btn-danger btn-action">
-        Supprimer
-      </a>
-                 
-    </td>
-  </tr>
-</tbody>
-</table>
+<p>Display Staff Dashboard Elements UI</p>
