--- a/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/receives-request/receives-request.component.html
@@ -32,7 +32,7 @@
                     <td>{{ request.attachments.length }}</td>
                     <td>{{ request.created_at | dateFormat }}</td>
                     <td>
-                      <button cButton class="me-1" color="primary" (click)="showRequest(request.id)">Details</button>
+                      <button cButton class="me-1" color="primary" (click)="showRequest(request.id)" style="font-size: 12px;">Details</button>
                     </td>
                   </tr>
                   </tbody>
