--- a/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
@@ -33,18 +33,18 @@
                 </div>
               </td>
               <td>
-                <a [routerLink]="['/voir_requete', request.id]" class="btn btn-primary">
+                <a [routerLink]="['/voir_requete', request.id]" class="btn btn-primary" style="font-size: 12px;">
                   Voir plus
                 </a>
               </td>
-<!--              <td>-->
-<!--                <a class="btn btn-warning btn-action mr-1">-->
-<!--                  Editer-->
-<!--                </a>-->
-<!--                <a class="btn btn-danger btn-action">-->
-<!--                  Supprimer-->
-<!--                </a>-->
-<!--              </td>-->
+             <td>
+               <a class="btn btn-warning btn-action mr-1" style="font-size: 12px;">
+                 Editer
+               </a>
+               <a class="btn btn-danger btn-action" style="font-size: 12px;">
+                 Supprimer
+               </a>
+             </td>
             </tr>
             </tbody>
           </table>
