--- a/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
+++ b/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
@@ -7,7 +7,7 @@
 >
   <c-sidebar-brand
     [brandFull]="{
-      src: 'assets/img/brand/coreui-angular.svg',
+      src: 'assets/img/brand',
       width: 200,
       height: 46,
       alt: 'Easy Request Logo',
