--- a/Front-CoreUI/src/app/features/screens/student/add-group-request/add-group-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-group-request/add-group-request.component.html
@@ -127,7 +127,7 @@
               class="col-form-label text-md-right col-12 col-md-3 col-lg-3"
             ></label>
             <div class="col-sm-12 col-md-7">
-              <button class="btn btn-primary">Soumettre</button>
+              <button class="btn btn-primary" style="font-size: 12px;">Soumettre</button>
             </div>
           </div>
         </div>
