--- a/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
+++ b/Front-CoreUI/src/app/containers/default-layout/default-layout.component.html
@@ -7,9 +7,9 @@
 >
   <c-sidebar-brand
     [brandFull]="{
-      src: 'assets/img/brand',
-      width: 200,
-      height: 46,
+      src: 'assets/img/easy-request.png',
+      width: 150,
+      height: 45,
       alt: 'Easy Request Logo',
     }"
     [brandNarrow]="{
