--- a/Front-CoreUI/src/app/features/screens/staff/add-deadline/add-deadline.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/add-deadline/add-deadline.component.html
@@ -9,16 +9,13 @@
                     <label>UE</label>            
                     <input type="text" class="form-control">
                 </div>
-              <div class="form-group">
-                <label class="d-block">Date d'envoie</label>
-                <a href="javascript:;" class="btn btn-primary daterange-btn icon-left btn-icon"><i
-                    class="fas fa-calendar"></i>&nbsp; <span style="font-size: 14px;">Choose Date</span>
-                    <input type="text" class="form-control" >
-                  </a> 
+                <div class="form-group">
+                  <label>Date d'envoie</label>            
+                  <input type="date" class="form-control">
               </div>
               <div class="form-group">
                 <label>Date de delais</label>
-                <input type="text" class="form-control datepicker">
+                <input type="date" class="form-control datepicker">
               </div>
               <br>
               <div>
