--- a/Front-CoreUI/src/app/features/screens/staff/view-deadlines/view-deadlines.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/view-deadlines/view-deadlines.component.html
@@ -27,12 +27,12 @@
                       <div class="badge badge-success">En cours</div>
                     </td>
                     <td>
-                      <a class="btn btn-warning btn-action mr-1">
+                      <a class="btn btn-warning btn-action mr-1"  style="font-size: 12px;">
                         Editer
                       </a>
                     </td>
                     <td>
-                      <a class="btn btn-danger btn-action mr-1">
+                      <a class="btn btn-danger btn-action mr-1"  style="font-size: 12px;">
                         supprimer
                       </a>
                     </td>
@@ -46,12 +46,12 @@
                       <div class="badge badge-success">En cours</div>
                     </td>
                     <td>
-                      <a class="btn btn-warning btn-action mr-1">
+                      <a class="btn btn-warning btn-action mr-1"  style="font-size: 12px;">
                         Editer
                       </a>
                     </td>
                     <td>
-                      <a class="btn btn-danger btn-action mr-1">
+                      <a class="btn btn-danger btn-action mr-1"  style="font-size: 12px;">
                         supprimer
                       </a>
                     </td>
@@ -65,12 +65,12 @@
                       <div class="badge badge-danger">Terminer</div>
                     </td>
                     <td>
-                      <a class="btn btn-warning btn-action mr-1">
+                      <a class="btn btn-warning btn-action mr-1"  style="font-size: 12px;">
                         Editer
                       </a>
                     </td>
                     <td>
-                      <a class="btn btn-danger btn-action mr-1">
+                      <a class="btn btn-danger btn-action mr-1" style="font-size: 12px;">
                         supprimer
                       </a>
                     </td>
@@ -84,12 +84,12 @@
                       <div class="badge badge-danger">Terminer</div>
                     </td>
                     <td>
-                      <a class="btn btn-warning btn-action mr-1">
+                      <a class="btn btn-warning btn-action mr-1" style="font-size: 12px;">
                         Editer
                       </a>
                     </td>
                     <td>
-                      <a class="btn btn-danger btn-action mr-1">
+                      <a class="btn btn-danger btn-action mr-1"  style="font-size: 12px;">
                         supprimer
                       </a>
                     </td>
