--- a/Front-CoreUI/src/app/features/screens/staff/show-request/show-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/staff/show-request/show-request.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="invoice-title">
-          <h5>Traiter la Requête</h5>
+          <h4 style="font-weight: bold;">Traiter la Requête</h4>
           <div class="invoice-number">#1</div>
         </div>
         <hr />
@@ -28,14 +28,14 @@
           <div class="col-md-6">
             <address>
               <strong>{{userData?.nom}}</strong><br />
-              {{userData?.matricule}},<br />
+              {{userData?.matricule}},<br >
               ICT4D<br />
             </address>
           </div>
           <div class="col-md-6 text-md-right">
             <address>
               <strong>Order Date:</strong><br />
-              Yaounde June 26, 2023<br /><br />
+             Yaounde le {{ request.created_at | date: 'dd/MM/yyyy' }}<br /><br />
             </address>
           </div>
         </div>
@@ -47,24 +47,31 @@
   </div>
   <div class="row mt-4">
     <div class="col-md-12">
-      <h5>objet de la requête</h5>
-      <p class="section-lead"> {{ request?.title }} {{ request?.content }}</p>
+      <h6 style="font-weight: bold;">objet et commentaire de la requête</h6><br>
+      <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> {{ request?.title }} <br> {{ request?.content }}</p>
       <div class="row mt-4">
         <div class="col-lg-8">
-          <h3>Pièces jointes</h3>
-          <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments">
-            <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index">
-              <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank">Pièce {{ i + 1 }}</a>
+          <h6 style="font-weight: bold;">Pièces jointes</h6><br>
+          <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments" >
+            <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index" >
+              <button  type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top"
+                      title="Voir la piece jointe.">  
+              <a [href]="getAttachmentUrl(attachment.file_path)" target="_blank" style="color: white;text-decoration: none; ">Pièce {{ i + 1 }}</a>
+             </button>
             </p>
           </ng-container>
+                 
 
           <ng-template #noAttachments>
             <p class="section-lead">Aucune pièce jointe disponible.</p>
           </ng-template>
         </div>
-      </div>
+      </div><br>
 
       <div class="float-lg-left mb-lg-0 mb-3">
+        <div  *ngIf="afficherAlerte" class="alert alert-success">
+          Votre Traitement a éte effectué avec succes
+         </div>  
         <button class="btn btn-success" (click)="validateRequest()" style="font-size: 12px;">
           Valider
         </button>&nbsp;&nbsp;
