--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -1,14 +1,23 @@
 <div class="row">
   <div class="col-12">
+    <c-alert [(visible)]="visible"
+             [dismissible]="dismissible"
+             color="{{color}}"
+             fade
+             *ngIf="visible">
+      <strong>{{ errorMessage }}</strong>
+    </c-alert>
     <div class="card">
       <div class="card-header">
+
         <h5>Ecrire votre Requête individuelle</h5>
       </div>
+
       <form action="add-individual-request" method="post" [formGroup]="requestForm" enctype="multipart/form-data"
             (ngSubmit)="sendRequest()">
         <div class="card-body">
-          <div class="form-group row mb-4">
-            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Motif</label>
+          <div class="form-group row mb-2">
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Motif<span class="text-danger">*</span></label>
             <div class="col-sm-12 col-md-7">
               <select class="form-control selectric" pInputText formControlName="requestPatternId" id="requestPatternId"
                       name="requestPatternId">
@@ -22,8 +31,8 @@
             </div>
           </div>
           <br/>
-          <div class="form-group row mb-4">
-            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Intitulé</label>
+          <div class="form-group row mb-2">
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Intitulé<span class="text-danger">*</span></label>
             <div class="col-sm-12 col-md-7">
               <input type="text" id="title" name="title" pInputText placeholder="Saisissez l'intitulé de votre requête"
                      formControlName="title" class="form-control"/>
@@ -33,25 +42,26 @@
             </div>
           </div>
           <br>
-          <div class="form-group row mb-4">
+          <div class="form-group row mb-2">
             <label class="col-form-label  text-md-right col-12 col-md-3 col-lg-3">commentaire
-              de la Requete</label>
+              de la Requete<span class="text-danger">*</span></label>
             <div class="col-sm-12 col-md-7">
-              <textarea class="summernote-simple  form-control" id="content" pInputTextarea formControlName="content"
-                        placeholder="Saisissez le contenu de votre requête" rows="8" cols="75"></textarea>
+              <textarea class="summernote-simple form-control" [(ngModel)]="requestModel" id="content" formControlName="content"
+                        placeholder="Saisissez le contenu de votre requête" rows="12" cols="75"></textarea>
               <div *ngIf="content.invalid && content.touched" class="text-danger">
                 <div *ngIf="content.errors?.['required']">Contenu de la requête est requis</div>
               </div>
             </div>
           </div>
 
-          <div class="form-group row mb-4">
+          <div class="form-group row mb-3">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3" for="formFile" cLabel>Piece
-              manuscrite</label>
+              manuscrite<span class="text-danger">*</span></label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
 
-                <input cFormControl id="formFile" (change)="onFileChange($event)" type="file" accept=".png, .jpeg, .jpg, .pdf"
+                <input cFormControl id="formFile" (change)="onFileChange($event)" type="file"
+                       accept=".png, .jpeg, .jpg, .pdf"
                        formControlName="fileHandWritten" name="fileHandWritten"/>
               </div>
               <div *ngIf="fileHandWritten.invalid && fileHandWritten.touched" class="text-danger">
@@ -61,11 +71,12 @@
           </div>
 
 
-          <div class="form-group row mb-4">
+          <div class="form-group row mb-3">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Pieces jointes</label>
             <div class="col-sm-12 col-md-7">
               <div class="custom-file">
-               <input cFormControl id="formFileMultiple" (change)="onFileAttachmentsChange($event)" formControlName="fileAttachments[]" multiple type="file"
+                <input cFormControl id="formFileMultiple" (change)="onFileAttachmentsChange($event)"
+                       formControlName="fileAttachments[]" multiple type="file"
                        name="fileAttachments[]"
                        accept=".png, .jpeg, .jpg, .pdf"/>
 
@@ -78,8 +89,8 @@
           </div>
 
 
-          <div class="form-group row mb-4">
-            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Destinataire</label>
+          <div class="form-group row mb-2">
+            <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Destinataire<span class="text-danger">*</span></label>
             <div class="col-sm-12 col-md-7">
               <select class="form-control selectric" name="receiver_id" formControlName="receiver_id" id="receiver_id">
                 <option value="" disabled selected>Sélectionnez un destinataire</option>
@@ -90,10 +101,7 @@
               </div>
             </div>
           </div>
-          <div *ngIf="afficherAlerte" class="alert alert-primary">
-            Votre requête a éte soumis avec succes
-          </div>
-          <div class="form-group row mb-4">
+          <div class="form-group row mb-2">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
               <button type="submit" class="btn btn-primary" style="font-size: 12px;">Soumettre</button>
