--- a/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/add-individual-request/add-individual-request.component.html
@@ -101,6 +101,9 @@
               </div>
             </div>
           </div>
+          <div *ngIf="afficherAlerte" class="alert alert-primary">
+            Votre Traitement a éte effectué avec succes
+          </div>
           <div class="form-group row mb-2">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
