--- a/Front-CoreUI/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front-CoreUI/src/app/containers/default-layout/default-header/default-header.component.html
@@ -32,27 +32,22 @@
 <!--</c-header>-->
 
 <ng-template #userDropdown>
-  <c-dropdown alignment="end" variant="nav-item">
+  <!-- <c-dropdown alignment="end" variant="nav-item">
     <button
       cButton
       color=""
       [caret]="false"
       cDropdownToggle
       class="py-0"
+      cBorder="none"
     >
       <c-avatar
-        cTextColor="primary"
-        shape="rounded-1"
         size="md"
-        src="./assets/img/avatars/8.jpg"
+        src="./assets/img/photo_2023-11-16_05-38-51.jpg"
         status="success"
+        
       >
       </c-avatar>
-<!--      <svg cIcon class="me-2" name="cilUser"></svg>-->
-
-
-
-
     </button>
     <ul cDropdownMenu class="pt-0 pr-5 w-auto">
       <li>
@@ -139,6 +134,6 @@
       </li>
       <li></li>
     </ul>
-  </c-dropdown>
+  </c-dropdown> -->
 </ng-template>
 
