--- a/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front-CoreUI/src/app/features/screens/student/list-request/list-request.component.html
@@ -40,16 +40,16 @@
                 
                    
               </td>
-              <td>
+              <!-- <td>
                 <a [routerLink]="['/voir_requete', request.id]" class="btn btn-primary" style="font-size: 12px;">
                   Voir plus
                 </a>
-              </td>
+              </td> -->
              <td style="display: flex; justify-content: space-between;">
                <a class="btn btn-warning btn-action mr-1" style="font-size: 12px;">
                  Editer
                </a>
-               <a class="btn btn-danger btn-action" style="font-size: 12px;">
+               <a class="btn btn-danger btn-action" style="font-size: 12px;color: white;">
                  Supprimer
                </a>
              </td>
